--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <title>Remote Team Map</title>
   <script src='index.js'></script>
  </head>
- <body>
-    <p><button onclick='geoFindMe()'>Show my location</button></p>
+ <body style = "min-width: 300px; height: 300px">
+    <p><a id='geo-find'>Show my location</button></p>
     <div id='out'></div>
  </body>
 </html>
